--- a/SimVQ/configs/libritts_262k.yaml
+++ b/SimVQ/configs/libritts_262k.yaml
@@ -2,9 +2,9 @@ seed_everything: true
 trainer:
   accelerator: gpu
   strategy: ddp_find_unused_parameters_true
-  devices: 4
+  devices: 1
   num_nodes: 1
-  precision: 16-mixed
+  precision: 32
   max_epochs: 50
   check_val_every_n_epoch: 1
   num_sanity_val_steps: 0
@@ -12,7 +12,7 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "vq_audio_log_1/change_rations"
+        dirpath: "vq_audio_log/simvq_262k" # Please specify your own path
         save_top_k: -1 # save all checkpoints
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
@@ -20,9 +20,9 @@ trainer:
   logger:
     class_path: lightning.pytorch.loggers.WandbLogger
     init_args:
-      project: "vae_audio"         
-      name: "change_rations_to_12_10_5_4" 
-      save_dir: "vq_audio_log_1/change_rations"
+      project: "test"         
+      name: "256k_base" 
+      save_dir: "vq_audio_log/simvq_262k" 
 
 model:
   class_path: taming.models.vq_audio.VQModel
@@ -30,12 +30,11 @@ model:
     ddconfig:
       causal: true
       dimension: 512
-      ratios: [12, 10, 5, 4]
     
     quantconfig:
       target: taming.modules.vqvae.quantize.SimVQ1D
       params:
-        n_e: 1024
+        n_e: 262144
         e_dim: 512
         beta: 0.25
         legacy: false
@@ -65,7 +64,7 @@ data:
   class_path: main.PadDataModuleFromConfig
   init_args:
     batch_size: 64
-    num_workers: 4
+    num_workers: 8
     train:
       target: taming.data.libritts.LibriTTSTrain
       params:
