--- a/SimVQ/configs/libritts_262k_50.yaml
+++ b/SimVQ/configs/libritts_262k_50.yaml
@@ -2,9 +2,9 @@ seed_everything: true
 trainer:
   accelerator: gpu
   strategy: ddp_find_unused_parameters_true
-  devices: 1
+  devices: 4
   num_nodes: 1
-  precision: 16-mixed
+  precision: 32
   max_epochs: 50
   check_val_every_n_epoch: 1
   num_sanity_val_steps: 0
@@ -12,7 +12,7 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "vq_audio_log/simvq_262k" # Please specify your own path
+        dirpath: "vq_audio_log/256k_ration_50" # Please specify your own path
         save_top_k: -1 # save all checkpoints
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
@@ -20,9 +20,9 @@ trainer:
   logger:
     class_path: lightning.pytorch.loggers.WandbLogger
     init_args:
-      project: "vae_tts"         
-      name: "big_codebook" 
-      save_dir: "vq_audio_log/simvq_262k" 
+      project: "vae_test"         
+      name: "256k_ration_50" 
+      save_dir: "vq_audio_log/256k_ration_50" 
 
 model:
   class_path: taming.models.vq_audio.VQModel
@@ -30,6 +30,7 @@ model:
     ddconfig:
       causal: true
       dimension: 512
+      ratios: [6,4,4,5]
     
     quantconfig:
       target: taming.modules.vqvae.quantize.SimVQ1D
