--- a/SimVQ/.vscode/launch_eval.json
+++ b/SimVQ/.vscode/launch_eval.json
@@ -5,18 +5,16 @@
         "name": "Python: Debug main.py",
         "type": "python",
         "request": "launch",
-        "program": "${workspaceFolder}/main.py",
+        "program": "${workspaceFolder}/evaluation_speech_speedtest.py",
         "args": [
-          "fit",
-          "--config",
-          "configs/libritts_262khz_25.yaml"
+          "--config_file","/root/Github/SimVQ/vq_audio_log/simvq_1k/config.yaml",
+          "--ckpt_path","/root/Github/SimVQ/vq_audio_log/simvq_1k/epoch=3-step=6648.ckpt"
         ],
         "env": {
           "XDG_CACHE_HOME": "/mnt/nfs3/zhangjinouwen/dataset/imagenet_2012",
           "DATA_ROOT":"/mnt/nfs3/zhangjinouwen/dataset/LibriTTS",
         },
         "console": "integratedTerminal",
-        "justMyCode": false
       }
     ]
   }
