--- a/SimVQ/.vscode/launch.json
+++ b/SimVQ/.vscode/launch.json
@@ -5,18 +5,16 @@
         "name": "Python: Debug main.py",
         "type": "python",
         "request": "launch",
-        "program": "${workspaceFolder}/main.py",
+        "program": "${workspaceFolder}/evaluation_speech_LibriTTSTestother.py",
         "args": [
-          "fit",
-          "--config",
-          "configs/libritts_262khz_25.yaml"
+          "--config_file","/root/Github/TTS_Tokenizer/SimVQ/vq_audio_log/262k_ration_25/tmp/1second/config.yaml",
+          "--ckpt_path","/root/Github/TTS_Tokenizer/SimVQ/vq_audio_log/262k_ration_25/epoch=49-step=6500.ckpt"
         ],
         "env": {
           "XDG_CACHE_HOME": "/mnt/nfs3/zhangjinouwen/dataset/imagenet_2012",
           "DATA_ROOT":"/mnt/nfs3/zhangjinouwen/dataset/LibriTTS",
         },
         "console": "integratedTerminal",
-        "justMyCode": false
       }
     ]
   }
