--- a/SimVQ/configs/libritts_262khz_50.yaml
+++ b/SimVQ/configs/libritts_262khz_50.yaml
@@ -18,11 +18,11 @@ trainer:
       init_args:
         logging_interval: step
   logger:
-    class_path: lightning.pytorch.loggers.WandbLogger
+    class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
-      project: "test"         
-      name: "262k_ration_50" 
-      save_dir: "vq_audio_log/262k_ration_50" 
+      save_dir: "vq_audio_log/262k_ration_50" #Please specify your own path
+      version: "1second"
+      name: "tmp"
 
 model:
   class_path: taming.models.vq_audio.VQModel
@@ -64,7 +64,7 @@ model:
 data:
   class_path: main.PadDataModuleFromConfig
   init_args:
-    batch_size: 64
+    batch_size: 20
     num_workers: 8
     train:
       target: taming.data.libritts.LibriTTSTrain
