--- a/SimVQ/configs/libritts_24khz.yaml
+++ b/SimVQ/configs/libritts_24khz.yaml
@@ -12,7 +12,7 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "vq_audio_log/simvq_1k" # Please specify your own path
+        dirpath: "vq_audio_log/24k_base" # Please specify your own path
         save_top_k: -1 # save all checkpoints
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
@@ -22,7 +22,7 @@ trainer:
     init_args:
       project: "test"         
       name: "1k_base" 
-      save_dir: "vq_audio_log/simvq_1k" 
+      save_dir: "vq_audio_log/24k_base" 
 
 model:
   class_path: taming.models.vq_audio.VQModel
