--- a/SimVQ/configs/libritts_24khz_10.yml
+++ b/SimVQ/configs/libritts_24khz_10.yml
@@ -12,17 +12,17 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "vq_audio_log_1/change_rations"
+        dirpath: "vq_audio_log/24k_10"
         save_top_k: -1 # save all checkpoints
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
         logging_interval: step
   logger:
-    class_path: lightning.pytorch.loggers.WandbLogger
+    class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
-      project: "test"         
-      name: "1k_rations_10" 
-      save_dir: "vq_audio_log_1/change_rations"
+      save_dir: "vq_audio_log/24k_10" #Please specify your own path
+      version: "1second"
+      name: "tmp"
 
 model:
   class_path: taming.models.vq_audio.VQModel
