--- a/SimVQ/configs/libritts_65khz_embeding.yaml
+++ b/SimVQ/configs/libritts_65khz_embeding.yaml
@@ -2,7 +2,7 @@ seed_everything: true
 trainer:
   accelerator: gpu
   strategy: ddp_find_unused_parameters_true
-  devices: 4
+  devices: 1
   num_nodes: 1
   precision: 32
   max_epochs: 50
@@ -12,7 +12,7 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "vq_audio_log/simvq_65k" # Please specify your own path
+        dirpath: "vq_audio_log/simvq_65k_embed" # Please specify your own path
         save_top_k: -1 # save all checkpoints
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
@@ -20,7 +20,7 @@ trainer:
   logger:
     class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
-      save_dir: "vq_log/simvq_65k" #Please specify your own path
+      save_dir: "vq_log/simvq_65k_embed" #Please specify your own path
       version: "1second"
       name: "tmp"
 
@@ -30,6 +30,7 @@ model:
     ddconfig:
       causal: true
       dimension: 512
+      ratios: [8,5,5,4]
     
     quantconfig:
       target: taming.modules.vqvae.quantize.SimVQ1D
@@ -47,13 +48,13 @@ model:
         disc_start: 0 # from 0 epoch
         codebook_enlarge_ratio: 0
         codebook_enlarge_steps: 2000
-        sample_rate: 24000
+        sample_rate: 16000
         commit_weight: 1000.0
         gen_loss_weight: 1.0
         mel_loss_coeff: 45.0
         mrd_loss_coeff: 1.0
     
-    sample_rate: 24000
+    sample_rate: 16000
     audio_normalize: false
     segment: None
     learning_rate: 1e-4
@@ -69,21 +70,21 @@ data:
       target: taming.data.libritts.LibriTTSTrain
       params:
         config:
-          sample_rate: 24000
+          sample_rate: 16000
           channels: 1
           clip_seconds: 1
     validation:
       target: taming.data.libritts.LibriTTSDev
       params:
         config:
-          sample_rate: 24000
+          sample_rate: 16000
           channels: 1
           clip_seconds: 1
     test:
       target: taming.data.libritts.LibriTTSTest
       params:
         config:
-          sample_rate: 24000
+          sample_rate: 16000
           channels: 1
           clip_seconds: -1
 
