--- a/SimVQ/configs/lfq/libritts_8khz_20_new_2.yaml
+++ b/SimVQ/configs/lfq/libritts_8khz_20_new_2.yaml
@@ -12,7 +12,7 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "test/8k_ration_20_loss_new" # Please specify your own path
+        dirpath: "vq_audio/8k_ration_20_hubertloss_fsq" # Please specify your own path
         save_top_k: -1 # save all checkpoints
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
@@ -20,12 +20,12 @@ trainer:
   logger:
     class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
-      save_dir: "test/8k_ration_20_loss_new" #Please specify your own path
+      save_dir: "vq_audio/8k_ration_20_hubertloss_fsq" #Please specify your own path
       version: "1second"
       name: "tmp"
 
 model:
-  class_path: taming.models.vq_audio_simvq.VQModel
+  class_path: taming.models.vq_audio_lfq.VQModel
   init_args:
     ddconfig:
       causal: true
@@ -33,7 +33,7 @@ model:
       ratios: [8,5,5,4]
     
     lossconfig:
-      target: taming.modules.losses.stft_simvq.VQSTFTWithDiscriminator
+      target: taming.modules.losses.stft_lfq.VQSTFTWithDiscriminator
       params:
         disc_conditional: False
         disc_in_channels: 1
