--- a/SimVQ/requirements.txt
+++ b/SimVQ/requirements.txt
@@ -1,3 +1,4 @@
+pip==24.0
 lightning==2.2.5
 jsonargparse[signatures]>=4.27.7
 tensorboard
@@ -8,3 +9,29 @@ requests
 lpips
 librosa
 omegaconf
+torchcrepe
+pesq
+pystoi
+vector_quantize_pytorch
+funasr
+zhconv
+modelscope
+librosa
+pydub
+onnx
+onnxconverter-common
+fire
+jiwer
+zhon==2.1.1
+nvitop
+numpy
+einops
+scipy
+huggingface-hub
+soundfile
+matplotlib
+lion_pytorch
+accelerate
+transformers
+beartype
+#fairseq==0.12.2
