update val and can use for one epoch

--- a/SimVQ/configs/simvq/libritts_8khz_20_wav.yaml
+++ b/SimVQ/configs/simvq/libritts_8khz_20_wav.yaml
@@ -27,6 +27,8 @@ trainer:
 model:
   class_path: taming.models.vq_audio_simvq.VQModel
   init_args:
+    distrillmodel: wav2vec2
+
     ddconfig:
       causal: true
       dimension: 512
@@ -62,3 +64,4 @@ data:
     val_path : "/mnt/nfs3/zhangjinouwen/dataset/rep/rep_small_wav_eval.txt"
 
 ckpt_path: null
+
