--- a/SimVQ/.vscode/launch.json
+++ b/SimVQ/.vscode/launch.json
@@ -1,22 +1,19 @@
 {
+    // 使用 IntelliSense 了解相关属性。 
+    // 悬停以查看现有属性的描述。
+    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-      {
-        "name": "Python: Debug main.py",
-        "type": "python",
-        "request": "launch",
-        "program": "${workspaceFolder}/main.py",
-        "args": [
-          "fit",
-          "--config",
-          "/root/Github/TTS_Tokenizer/SimVQ/configs/lfq/libritts_8khz_20_bert.yaml"
-        ],
-        "env": {
-          "XDG_CACHE_HOME": "/mnt/nfs3/zhangjinouwen/dataset/imagenet_2012",
-          "DATA_ROOT":"/mnt/nfs3/zhangjinouwen/dataset/LibriTTS",
-        },
-        "console": "integratedTerminal",
-        "justMyCode": false
-      }
+        
+        {
+            "name": "Python 调试程序: 当前文件",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "0" // 设置显卡环境变量
+            }
+        }
     ]
-  }
+}
