--- a/SimVQ/configs/simvq/mel/libritts_8khz_20_bert_d_avg.yaml
+++ b/SimVQ/configs/simvq/mel/libritts_8khz_20_bert_d_avg.yaml
@@ -58,8 +58,8 @@ data:
   init_args:
     batch_size: 6
     num_workers: 8
-    train_path : "/root/Github/TTS_Tokenizer/data/train_small.txt"
-    val_path : "/root/Github/TTS_Tokenizer/data/test_1500.txt"
+    train_metalst : "/root/Github/TTS_Tokenizer/data/train_small.txt"
+    val_metalst : "/root/Github/TTS_Tokenizer/data/test_1500.txt"
     segement_size: 65536
 
 ckpt_path: null
