--- a/SimVQ/configs/simvq/baseline/libritts_8khz_20_bert_d_avg.yaml
+++ b/SimVQ/configs/simvq/baseline/libritts_8khz_20_bert_d_avg.yaml
@@ -2,7 +2,7 @@ seed_everything: true
 trainer:
   accelerator: gpu
   strategy: ddp_find_unused_parameters_true
-  devices: 4
+  devices: [0,5,6,7]
   num_nodes: 1
   precision: 32
   max_epochs: 50
@@ -58,7 +58,7 @@ data:
   init_args:
     batch_size: 6
     num_workers: 8
-    train_metalst : "/root/Github/TTS_Tokenizer/data/train_middle.txt"
+    train_metalst : "/root/Github/TTS_Tokenizer/data/train_small.txt"
     val_metalst : "/root/Github/TTS_Tokenizer/data/test_1500.txt"
     segement_size: 72000
 
