--- a/SimVQ/configs/simvq/mel/libritts_8khz_20_bert_d_avg.yaml
+++ b/SimVQ/configs/simvq/mel/libritts_8khz_20_bert_d_avg.yaml
@@ -2,7 +2,7 @@ seed_everything: true
 trainer:
   accelerator: gpu
   strategy: ddp_find_unused_parameters_true
-  devices: [1,2,3,4]
+  devices: [4,5,6,7]
   num_nodes: 1
   precision: 32
   max_epochs: 50
@@ -35,16 +35,13 @@ model:
     lossconfig:
       target: taming.modules.losses.stft_simvq_mel.VQSTFTWithDiscriminator
       params:
-        disc_conditional: False
-        disc_in_channels: 1
-        disc_start: 0 # from 0 epoch
-        codebook_enlarge_ratio: 0
-        codebook_enlarge_steps: 2000
-        sample_rate: 24000
-        commit_weight: 1000.0
-        gen_loss_weight: 1.0
-        mel_loss_coeff: 45.0
-        mrd_loss_coeff: 1.0
+          cqtd_filters: 128,
+          cqtd_max_filters: 1024,
+          cqtd_filters_scale: 1,
+          cqtd_dilations: [1, 2, 4],
+          cqtd_hop_lengths: [512, 256, 256],
+          cqtd_n_octaves: [9, 9, 9],
+          cqtd_bins_per_octaves: [24, 36, 48],
     
     sample_rate: 24000
     audio_normalize: false
