--- a/SimVQ/configs/simvq/libritts_8khz_20_mrd.yaml
+++ b/SimVQ/configs/simvq/libritts_8khz_20_mrd.yaml
@@ -12,17 +12,17 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "vq_audio_simvq/8k_ration_20_loss" # Please specify your own path
+        dirpath: "vq_audio_simvq_mrd/8k_ration_20_loss" # Please specify your own path
         save_top_k: -1 # save all checkpoints
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
         logging_interval: step
   logger:
-    class_path: lightning.pytorch.loggers.TensorBoardLogger
+    class_path: lightning.pytorch.loggers.WandbLogger
     init_args:
-      save_dir: "vq_audio_simvq/8k_ration_20_loss" #Please specify your own path
-      version: "1second"
-      name: "tmp"
+        save_dir: "vq_audio_simvq_mrd/8k_ration_20_loss"
+        project: "endresult_tmp"  
+        name: "mrd"         
 
 model:
   class_path: taming.models.vq_audio_simvq.VQModel
@@ -33,7 +33,7 @@ model:
       ratios: [8,5,5,4]
     
     lossconfig:
-      target: taming.modules.losses.stft_simvq.VQSTFTWithDiscriminator
+      target: taming.modules.losses.stft_simvq_update.VQSTFTWithDiscriminator
       params:
         disc_conditional: False
         disc_in_channels: 1
