--- a/SimVQ/.gitignore
+++ b/SimVQ/.gitignore
@@ -9,3 +9,9 @@ vq_audio_*
 core*
 events*
 *.png
+thirdPartyLibrary/hifi-gan
+checkpoint
+wandb
+!taming/models/vq_audio_simvq_repeat.py
+eve*
+!taming/models/vq_audio_simvq_mel.py
